# custom-shape-jigsaw

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/custom_shape_jigsaw/: __init__.py  api.py  automata.py  cli.py  config.py  errors.py  grids.py  result.py  rng.py  svg_input.py  svg_output.py  tabs.py  units.py
tests/: conftest.py  test_config_units.py  test_generation.py  test_rng.py  test_tab_parity.py
tests/data/: rng_reference.json
tests/tools/: capture_rng.js  capture_tab.js
